k8s/app/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: community-fe-svc
  namespace: app
  labels:
    app: community-fe
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: community-fe
