k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-ingress
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.k8s.my-community.shop
        - k8s.my-community.shop
        - ws.k8s.my-community.shop
      secretName: community-tls
  rules:
    - host: api.k8s.my-community.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-api-svc
                port:
                  number: 8000
    - host: k8s.my-community.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-fe-svc
                port:
                  number: 80
    - host: ws.k8s.my-community.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-ws-svc
                port:
                  number: 8001
